--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     
     <div id="watch"></div>
+    <p>MISIÓN. Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
     <script src="./JS/script.js"></script>
 </body>
 </html>
