--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
     
-    
+    <p>MISIÓN: Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
+
     <div id="watch"></div>
-    <p>MISIÓN. Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
     <script src="./JS/script.js"></script>
 </body>
 </html>
