--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <title>Reloj UVM</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>    
 <body>
     <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
-    
-    <p>MISIÓN: Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
+    <div class="cointainer-fluid">    
+        <p>MISIÓN: Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
+    </div>
 
     <div id="watch"></div>
     <script src="./JS/script.js"></script>
