--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>    
 <body>
     <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
-       
-        <p>MISIÓN: Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
+       <div class="container-fluid">
+            <p>MISIÓN: Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
+        </div>
     
 
     <div id="watch"></div>
