--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
        <div class="container-fluid">
+            <p>LEMA: Por siempre responsable de lo que se ha cultivado </p>
+            <!--
             <p>MISIÓN: Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
+            -->
         </div>
     
 
