--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             
             <p>MISIÓN: Ampliamos el acceso a la educación de calidad global para formar personas productivas que agreguen valor a la sociedad.</p>
             -->
+            <p>Semana 11</p>
         </div>
 
     <div id="watch"></div>
