cambio en reloj

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             -->
            
         </div>
-        <p>Semana 01</p>
+        <h2>Semana 02</h2>
     <div id="watch"></div>
     <script src="./JS/script.js"></script>
 </body>
