--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container-fluid">
         <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
         <h2>Semana 05</h2>
+        <h3>Revisar Bitácora</h3>
         <div id="watch"></div>
         <script src="./JS/script.js"></script>
      </div>
