--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container-fluid">
         <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
         <h2>Semana 12</h2>
+        <H4>Revisar Bitácora</H4>
         
         <div id="watch"></div>
         <script src="./JS/script.js"></script>
