--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
     <div class="container-fluid">
         <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
-        <h2>Semana 13</h2>
-        <H4>Revisar Bitácora</H4>
+        <h2>Semana 14</h2>
+        <H4>Calidicaciones</H4>
         
         <div id="watch"></div>
         <script src="./JS/script.js"></script>
