--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
         <h2>Semana 14</h2>
-        <H4>Calidicaciones</H4>
+        <H4>Calificaciones</H4>
         
         <div id="watch"></div>
         <script src="./JS/script.js"></script>
