--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 <body>
     
     <div class="container-fluid">
-        <div><img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""></div><br>
-        <h2>Semana 14</h2>
-        <H4>Calificaciones</H4>
-        
+        <img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""><br>
+        <h2>Semana 15</h2>
         <div id="watch"></div>
         <script src="./JS/script.js"></script>
      </div>
