--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reloj UVM</title>
-    <link rel="shortcut icon" href="./assets/reloj.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     
     <div class="container-fluid">
         <img src="./assets/uvmlogo.svg" width="200px" alt="" srcset=""><br>
-        <h2>Semana 16</h2>
+        <h2>Semana 17</h2>
         <div id="watch"></div>
         <script src="./JS/script.js"></script>
      </div>
